--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ li {
 .container {
   justify-self: center;
   margin-top: 120px;
+  margin-bottom: 800px;
   background: white;
   border-radius: 4px;
   padding: 20px;
